fix text overflow

--- a/src/pages/sendPage/components/invoiceInfo.css
+++ b/src/pages/sendPage/components/invoiceInfo.css
@@ -32,4 +32,6 @@
 .invoiceContainer .addressText {
   flex-shrink: 1;
   margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
